--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,8 @@
 :root {
   --color-blue: #2196f3;
   --color-white: #fff;
-  --color-red: #ff5722;
-  --color-redish: #7a7573;;
+  --color-red: #dc3545;
+  --color-redish: #7a7573;
   --color-black: #2b2b2b;
   --color-gray: #666;
   --color-gray-lg: #ebebeb;
@@ -14,13 +14,11 @@
   --breadcrumb-bg: var(--color-black);
   --breadcrumb-padding: 10px 20px;
   --breadcrumb-border: #e5e5e5;
-
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
@@ -37,44 +35,53 @@ body {
   font-family: var(--fontone);
 }
 
-
-
-
-
-header nav {
+header > nav {
   padding: var(--breadcrumb-padding);
   margin: 0;
-  transition: all 0s linear 0ms;
+  transition: all 0.3s linear 0ms;
+  align-items: baseline;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
-
-.breadcrumb .breadcrumb-item {
-  text-decoration: none !important;
-  border-bottom: none !important;
-}
-
-.breadcrumb-item.active {
-  color: inherit !important;
-  text-decoration: underline;
-  font-feature-settings: inherit;
-
+.breadcrumb {
+  line-height: 18px;
+  font-variant: all-small-caps;
+  font-size: 0.65rem;
+  vertical-align: baseline;
+  height: 22px;
 }
 
 .breadcrumb-item a.active {
-  color: var(--color-black) !important;
-  text-decoration: underline;
+  background-color: var(--color-black);
+  display: inline-block;
+  color: var(--color-white);
+  border: 1px solid var(--color-gray);
+  padding: 1px 3px;
+  cursor: default;
+  border-radius: 2px;
+  text-decoration: none;
 }
 
 .breadcrumb-item a {
   color: var(--bs-gray-600);
+  cursor: pointer;
 }
 
+.breadcrumb-item + .breadcrumb-item::before {
+  content: var(--breadcrumb-divider, ">") !important;
+  padding: 0px;
+  margin-left: 7px;
+  line-height: 18px;
+  vertical-align: baseline;
+}
 
-
-
-
+.btn-outline-dark:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
