--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -5,6 +5,7 @@
         overflow: hidden;
         > div {
             animation-duration: .5s !important;
+            animation-delay: 150ms !important;
           
         }
     }
