--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -1,23 +1,73 @@
 .product-details {
   display: flex;
-
   button.add-product {
-    min-width: 186px;
+    display: flex;
+    height: 42px;
+    padding: 0;
     overflow: hidden;
-
     > div {
-      animation-duration: 0.5s !important;
-      animation-delay: 150ms !important;
+      line-height: 42px;
+      animation-duration: 1s;
+      animation-delay: 150ms;
     }
   }
 
-  .goto.btn.btn-dark, .goto.btn.btn-dark.disabled {
+  .goto.btn.btn-dark,
+  .goto.btn.btn-dark.disabled {
     height: 42px;
   }
 
   .goto.btn.btn-dark.disabled {
-    background-color: #bebebe;
-    border-color: #a0a0a0;
+    background-color: #9e9e9e;
+    border: 1px solid #9e9e9e;
     cursor: pointer;
   }
+}
+
+.show-product {
+  @media only screen and (max-width: 1199px) {
+    padding: 0 1.5rem;
+    margin: 3rem 0;
+    box-sizing: border-box;
+    img {
+      width: 100%;
+      max-width: 400px;
+      margin: 0 auto;
+      height: auto;
+      max-width: 340px;
+      padding: 2rem;
+    }
+  }
+}
+
+
+.show-product-description {
+  @media only screen and (max-width: 1199px) {
+    width: 100%;
+    text-align: center;
+    h1 {
+      margin: 1rem 0 1rem;
+    }
+  }
+}
+
+.button-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 3rem 0 0;
+    button {
+      height: 42px;
+      font-size: 1.1rem;
+      letter-spacing: .5px;
+      .add-product {
+        overflow: hidden;
+        > div {
+          height: 42px;
+          
+        }
+      }
+    }
+  
+  
 }
