--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -1,23 +1,47 @@
+
+.show-product-description {
+  display: flex;
+  justify-content: center;
+  padding: 0 !important;
+  margin: 3rem 0 !important;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
 .product-details {
   display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3rem;
+  padding: 0 !important;
+  
   button.add-product {
     display: flex;
-    height: 42px;
-    padding: 0;
     overflow: hidden;
-    > div {
+    div {
+      visibility: visible;
+      transition: all .4s linear 0ms;
+      text-align: center;
+      width: 100%;
       line-height: 42px;
-      animation-duration: 1s;
-      animation-delay: 150ms;
+      animation-duration: .5s;
+      animation-delay: 0ms;
+      &::before {
+        visibility: hidden;
+      }
     }
+    
   }
 
-  .goto.btn.btn-dark,
-  .goto.btn.btn-dark.disabled {
-    height: 42px;
+
+  .btn-check:focus+.btn-dark,.btn-dark:focus {
+    box-shadow: none !important;
   }
 
-  .goto.btn.btn-dark.disabled {
+  button.goto.btn.btn-dark.disabled {
     background-color: #9e9e9e;
     border: 1px solid #9e9e9e;
     cursor: pointer;
@@ -40,7 +64,6 @@
   }
 }
 
-
 .show-product-description {
   @media only screen and (max-width: 1199px) {
     width: 100%;
@@ -52,22 +75,15 @@
 }
 
 .button-wrapper {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin: 3rem 0 0;
-    button {
-      height: 42px;
-      font-size: 1.1rem;
-      letter-spacing: .5px;
-      .add-product {
-        overflow: hidden;
-        > div {
-          height: 42px;
-          
-        }
-      }
-    }
-  
-  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 3rem 0 0;
+  button {
+    padding: 0;
+    height: 42px;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+    
+  }
 }
