--- a/src/styles/components/Products.scss
+++ b/src/styles/components/Products.scss
@@ -1,4 +1,15 @@
 .show-all-products {
+  .products-filters button {
+    transition: all .4s linear 50ms;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 
+    0 1px 0 -1px rgba(0,0,0,0.12), 0 0 2px 0 rgba(0,0,0,0.20);
+  }
+  .products-filters > button:active,.products-filters > button:focus {
+    background-color: white;
+    color: black;
+  }
+  
+ 
   .card {
     overflow: hidden;
     img {
@@ -38,5 +49,6 @@
     height: 42px;
     font-size: 1.25rem;
     letter-spacing:.5px;
+    
   }
 }
