--- a/src/styles/components/Cart.scss
+++ b/src/styles/components/Cart.scss
@@ -9,7 +9,8 @@
     max-width: 30px;
     height: auto;
   }
-  h3,h4 {
+  h3,
+  h4 {
     margin: 0;
     vertical-align: middle;
   }
@@ -23,35 +24,35 @@
   .cart-product {
     position: relative;
     background-color: #fafafa;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 300px;
     margin-bottom: 3rem;
-    box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, .12), 
-    0 2px 1px -1px rgba(0, 0, 0, .05), 0px 0px, 1px 0 rgba(0, 0, 0, .05);
-    justify-content: space-between;
+    display: flex;
+    height: 175px;
+    align-items: center;
+    box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.12),
+      0 2px 1px -1px rgba(0, 0, 0, 0.05), 0px 0px, 1px 0 rgba(0, 0, 0, 0.05);
     @media screen and (max-width: 768px) {
-      height: 100%;
+      height: auto;
       box-shadow: none;
     }
-    
+
     .image-link {
+      width: 100%;
       display: flex;
       overflow: auto;
       flex-direction: column;
       justify-content: center;
       height: 100%;
+      @media screen and (max-width: 767px) {
+        width: 100%;
+        background-color: #fafafa;
+      }
     }
-    
-
 
     @media screen and (max-width: 767px) {
       width: 100%;
       display: flex;
       flex-direction: column;
       background-color: transparent;
-      padding-bottom: 3rem;
       border-radius: 0 !important;
     }
 
@@ -61,31 +62,36 @@
       top: 20px;
       font-size: 1.25rem;
       @media screen and (max-width: 767px) {
-        right: 25px;
-        top: 20px;
+        font-size: 1.15rem;
+        right: 30px;
+        top: 25px;
       }
     }
-    
+
     .cart-image {
-      margin: 2rem 0;
-      width: 150px;
+      width: 100%;
+      max-width: 96px;
       height: auto;
       align-items: center;
-      
     }
 
     .cart-title {
       display: flex;
       flex-direction: column;
-      margin: 2rem 0;
-      justify-content: space-between;
+      height: 150px;
+      overflow: hidden;
+      justify-content: center;
+
+      h5 {
+        font-weight: normal;
+      }
     }
 
     .cart-total {
       display: flex;
       flex-direction: column;
-      margin: 2rem 0;
-      justify-content: flex-start;
+      height: 118px;
+      justify-content: center;
     }
 
     @media screen and (max-width: 767px) {
@@ -97,57 +103,56 @@
       .cart-title {
         padding: 0 !important;
         margin-top: 2rem;
+        height: auto;
 
-        h3 {
+        h5 {
           font-size: 1.25rem;
           margin-top: 0 !important;
-          margin-bottom: .5rem !important;
-          padding-left: 0.5rem;
+          margin-bottom: 0.5rem !important;
+          text-align: center;
         }
 
         p {
           margin: 0;
-          padding-left: 0.5rem;
+          justify-content: center;
         }
       }
       .cart-total {
-        margin-top: 2rem;
+        margin-top: 0;
         display: flex;
         justify-content: flex-start;
-        align-items: flex-end;
+        align-items: center;
         padding: 0;
 
         p {
           margin: 0;
-          margin-bottom: 0.5rem;
           padding-right: 0.5rem;
           height: 38px;
           font-size: 1.25rem;
-          justify-content: flex-end;
+          justify-content: center;
         }
 
         > section {
           margin: 0 !important;
+          justify-content: flex-start !important;
 
           button {
             width: 25px;
             height: 25px;
             font-size: 1rem;
-            margin: 0 .5rem;
+            margin: 0 0.5rem;
             line-height: 25px !important;
           }
         }
-
       }
-
     }
 
     .cart-qty {
-      width: 30px;
-      height: 30px;
+      width: 25px;
+      height: 25px;
       padding: 0;
       margin: 0 1.25rem;
-      line-height: 30px;
+      line-height: 25px;
     }
 
     .item-information {
@@ -161,21 +166,20 @@
     .item-total {
       display: flex;
       width: 100%;
-      line-height: 1.5;
       letter-spacing: 1px;
       justify-content: center;
-      margin: 2rem 0;
-      font-size: 1.55rem;
     }
-
   }
-  
+
   .checkout-btn {
     display: flex;
     flex-wrap: wrap;
     margin: 5rem 0;
     justify-content: center;
-    
+    button {
+      padding: 0;
+      height: 42px;
+      line-height: 42px;
+    }
   }
-
 }
