--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -1,5 +1,3 @@
-
-
 .show-product-description {
   display: flex;
   justify-content: center;
@@ -14,31 +12,31 @@
   display: flex;
   flex-wrap: wrap;
   height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   margin-bottom: 3rem;
   padding: 0 !important;
-  
+
   button.add-product {
     display: flex;
     overflow: hidden;
     div {
       visibility: visible;
-      transition: all .4s linear 0ms;
+      transition: all 0.4s linear 0ms;
       text-align: center;
       width: 100%;
       line-height: 42px;
-      animation-duration: .5s;
+      animation-duration: 0.5s;
       animation-delay: 0ms;
       &::before {
         visibility: hidden;
       }
     }
-    
   }
 
-
-  .btn-check:focus+.btn-dark,.btn-dark:focus {
+  .btn-check:focus + .btn-dark,
+  .btn-dark:focus {
     box-shadow: none !important;
   }
 
@@ -54,7 +52,7 @@
     padding: 0 1.5rem;
     margin: 3rem 0;
     box-sizing: border-box;
-    
+    max-width: 200px;
   }
 }
 
@@ -71,12 +69,11 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 3rem 0 0;
+  margin: 2rem 0 0;
   button {
     padding: 0;
     height: 42px;
     font-size: 1.1rem;
     letter-spacing: 0.5px;
-    
   }
 }
