--- a/src/styles/components/Cart.scss
+++ b/src/styles/components/Cart.scss
@@ -23,12 +23,11 @@
 
   .cart-product {
     position: relative;
-    background-color: #fafafa;
     margin-bottom: 3rem;
     display: flex;
     height: 175px;
     align-items: center;
-    box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.12),
+    box-shadow: 0px 1px 1px 0 rgba(0, 0, 0, 0.12),
       0 2px 1px -1px rgba(0, 0, 0, 0.05), 0px 0px, 1px 0 rgba(0, 0, 0, 0.05);
     @media screen and (max-width: 768px) {
       height: auto;
@@ -44,7 +43,8 @@
       height: 100%;
       @media screen and (max-width: 767px) {
         width: 100%;
-        background-color: #fafafa;
+        box-shadow: 0px 1px 2px 0 rgba(0, 0, 0, 0.12),
+          0 0px 0px 1px rgba(0, 0, 0, 0.04), 0px 0px, 1px 0 rgba(0, 0, 0, 0.05);
       }
     }
 
