--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  border-bottom: 1px solid rgba(0,0,0,0.3);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 .navbar-nav .nav-item {
   text-align: center;
@@ -8,7 +8,7 @@
   a {
     padding: 4px 0 4px;
     &.home-shop {
-     margin-top: 0;
+      margin-top: 0;
     }
   }
 }
@@ -39,5 +39,3 @@
 .btn.btn-outline-dark:hover i.fa {
   color: var(--color-white);
 }
-
-
