--- a/src/styles/components/Products.scss
+++ b/src/styles/components/Products.scss
@@ -15,7 +15,7 @@
   .products-filters > button:active,
   .products-filters > button:focus {
     background-color: white;
-    border-color: var(--color-black);
+    color: var(--color-black);
   }
 }
 
