--- a/src/styles/components/Products.scss
+++ b/src/styles/components/Products.scss
@@ -1,5 +1,8 @@
 /* products filters */
 .all-products {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   min-height: 100vh;
   .products-filters {
     display: flex;
