--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -91,6 +91,7 @@
   flex-direction: column;
   margin: 2rem 0 0;
   button {
+    transition: all 0.4s linear 0ms;
     height: 34px;
     font-size: 1.1rem;
     letter-spacing: 0.5px;
