--- a/src/pages/signin/signin.module.css
+++ b/src/pages/signin/signin.module.css
@@ -1,7 +1,23 @@
 .signin {
   width: 100%;
-  margin: 0 auto;
-  max-width: 610px;
+  overflow: scroll;
+  min-height: calc(100vh - 54px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#card {
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
+  height: calc(50vh + 210px);
+}
+
+@media screen and (max-width: 767px) {
+  #card {
+    box-shadow: none;
+    border: none;
+  }
 
 }
 
@@ -28,7 +44,7 @@
 
 .signinForm input:focus {
   outline: none !important;
-  box-shadow: none !important
+  box-shadow: none !important;
 }
 
 .input-group-prepend .fa {
@@ -47,10 +63,8 @@
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4d4c4c;
-  border-radius: 0.25rem;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  background-color: var(--color-bthree);
+  border-radius: 0.25rem 0 0 0.25rem;
 
 }
 
@@ -90,7 +104,8 @@
 
 
 #formFooter {
-  background-color: #4d4c4c;
+  background-color: var(--color-bthree);
+  color: var(--color-white);
 }
 
 
@@ -99,7 +114,7 @@
   line-height: 23px;
   text-align: center;
   font-size: 1rem;
-  color: var(--color-white);
+  color: white;
 }
 
 .noAccount a {
@@ -116,17 +131,15 @@
 
 
 #signinFooter {
-  justify-content: flex-end !important;
-  height: 18vh;
+  justify-content: flex-start !important;
 }
 
 #signinBtn {
   padding: 0;
   transition: all 0.4s linear 50ms;
   line-height: 32px;
-  letter-spacing: 0.35px;
+  letter-spacing: 0.5px;
   color: var(--color-black);
-  width: 150px;
   font-weight: 400;
   border-color: var(--color-black);
   font-size: 1.2rem;
@@ -151,10 +164,29 @@
   margin: 1rem 0;
 }
 
+.socialBtn a:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .socialBtn a {
   padding-left: 2rem;
   padding-right: 2rem;
   margin: 0 1rem 0 1rem;
+}
+
+@media screen and (max-width: 767px) {
+  #signinBtn {
+    width: 100%;
+  }
+  .socialBtn a {
+    padding: 0;
+    display: block;
+    vertical-align: middle;
+    line-height: 32px;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
 }
 
 
