--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -46,9 +46,10 @@
     }
 
     button.goto.btn.btn-dark.disabled {
-      background-color: #9e9e9e;
-      border: 1px solid #9e9e9e;
+      background-color: var(--color-btwo);
+      border: 1px solid var(--color-bfour);
       cursor: pointer;
+
     }
   }
 }
